--- a/.gitignore
+++ b/.gitignore
@@ -163,7 +163,7 @@ dmypy.json
 .pyre/
 
 # pytype static type analyzer
-.pytype/
+g.pytype/
 
 # Cython debug symbols
 cython_debug/
@@ -205,3 +205,4 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
