--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,15 @@
-certifi==2025.11.12
-charset-normalizer==3.4.4
 contourpy==1.3.3
 cycler==0.12.1
 fonttools==4.61.1
-idna==3.11
 kiwisolver==1.4.9
 matplotlib==3.10.8
 numpy==2.2.6
 opencv-python==4.12.0.88
 packaging==25.0
-panda==0.3.1
+pandas==2.3.3
 pillow==12.0.0
 pyparsing==3.3.1
 python-dateutil==2.9.0.post0
-requests==2.32.5
-setuptools==80.9.0
+pytz==2025.2
 six==1.17.0
-urllib3==2.6.2
+tzdata==2025.3
