--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1"
 dependencies = [
     "opencv-python>=4.12",
     "pandas>=2.3",
-    "matplotlib>=3.10"
+    "matplotlib>=3.10",
+    "tabulate>=0.9",
+    "plotext>=5.3"
 ]
 requires-python = ">= 3.13"
 authors = [
