--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ dependencies = [
     "pandas>=2.3",
     "matplotlib>=3.10",
     "tabulate>=0.9",
-    "plotext>=5.3"
+    "plotext>=5.3",
+    "nava>=0.6"
 ]
 requires-python = ">= 3.13"
 authors = [
